[api-doc] 특정 유저의 카테고리들 로드
